--- a/src/static/index.html
+++ b/src/static/index.html
@@ -3,9 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TODO.md</title>
-    <link rel="stylesheet" href="{{resourceRoot}}/style.css">
-    <link rel="stylesheet" href="{{modules}}/@vscode/codicons/dist/codicon.css">
-    <script type="module" src="{{resourceRoot}}/script.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../node_modules/@vscode/codicons/dist/codicon.css">
+    <script type="module" src="script.js"></script>
 </head>
 <body></body>
 </html>
